# Web-Scraping-Mercado-livre

./: Análises.ipynb  README.md  app.py  aux.ipynb  dockerfile  main.ipynb  mercado_livre_produtos.csv  pyproject.toml  web_scraping.py
