[tool.poetry]
name = "3d-printer"
version = "0.1.0"
description = ""
authors = ["walter <walterbiel1237@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.28.1"
webdriver-manager = "^4.0.2"
pandas = "^2.2.3"
duckdb = "^1.1.3"
seaborn = "^0.13.2"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
